# get-ocnverted-summa

./: Dockerfile  README.md  build-wasm.sh  deploy.sh  dev-deploy.sh  docker-cleanup.sh  docker-compose.yml  docker-health-check.sh  monitoring.sh  nginx.conf  package-lock.json  package.json  production-deploy.sh
Get-Converted-Exams/: document_analyser.py
python-wasm/: document_analyzer.py
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs
src/: App.jsx
src/components/: ConversionProgress.jsx  DownloadSection.jsx  ExamSelector.jsx
