[package]
name = "exam_converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
pdf = "0.8"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileReader",
  "Blob",
  "Uint8Array",
]